fix and update.

--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.2"
+  },
+  "dependencies": {
+    "jquery": "^3.4.1"
   }
 }
