--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,18 @@ edition = "2018"
 crate-type = ["cdylib"]
 
 [dependencies]
-wasm-bindgen = "0.2.58"
+# wasm-bindgen = "0.2.58"
 wasm-bindgen-futures = "0.4.8"
 js-sys = "0.3.35"
+futures-channel = "0.3.4"
+futures-util = "0.3.4"
+bytes = "0.5.4"
+serde = "1.0.104"
+serde_derive = "1.0.104"
+
+[dependencies.wasm-bindgen]
+version = "0.2.58"
+features = ["serde-serialize"]
 
 [dependencies.rsocket_rust]
 git = "https://github.com/rsocket/rsocket-rust"
@@ -19,3 +28,15 @@ branch = "improve/pick_transport"
 [dependencies.rsocket_rust_transport_wasm]
 git = "https://github.com/rsocket/rsocket-rust"
 branch = "improve/pick_transport"
+
+[dependencies.web-sys]
+version = "0.3.35"
+features = [
+  "FileReader",
+  "ProgressEvent",
+  "Blob",
+  "ErrorEvent",
+  "MessageEvent",
+  "WebSocket",
+  "Event",
+]
